2023-02-15  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Fixes --ignore-host-cn behaviour with --match

2023-01-27  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): System info debugging right at the beginning

2023-01-16  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert: Added an option to set the security level (see help)
        * check_ssl_cert (fetch_certificate): better error handling

2023-01-05  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (usage): Added an option to ignore header problems with --all and --all-local

2022-11-30  Marcel Burkhalter <marcel.burkhalter@weareplanet.com>

        * check_ssl_cert (main): Add command line argument to set the PATH variable

2022-11-30  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_ocsp): ignoring OCSP errors if specified from the command line

2022-10-24  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (get_tds_certificate): Adding the timeout check on the TDS checks

2022-10-18  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Print the $PATH in debug mode

2022-10-06  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert: additional chain checks (no root attributes and handling of double certificates
        * check_ssl_cert (check_attr): fixed a bug in the chain checks

2022-09-27  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): if nmap is not found the plugin continues
        * check_ssl_cert (parse_command_line_options): fixing an infinite loop (not shifting the command line arguments)

2022-09-24  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (add_unrequired_header): Fixing #413

2022-09-23  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_attr): use only integers for the certificate max duration of 13 months
        * check_ssl_cert (main): read options from a configuration file

2022-09-20  Matteo Corti  <matteo@corti.li>
